--- a/group_vars/all/tunnel.yaml
+++ b/group_vars/all/tunnel.yaml
@@ -1,4 +1,24 @@
 tunnel_ip_subnet: 172.16.234.0
 tunnel_ip_range: 172.16.234
 tunnel_cidr: 24
-tunnel_interface_name: gre
+tunnel_interface_name: wg0
+wireguard_port: 51820
+wireguard_private_key_path: /etc/wireguard/private_key
+wireguard_public_key_path: /etc/wireguard/public_key
+wireguard_interface_count: 4
+machine_range: 10.0.0.0/24
+engine_range: 10.10.0.0/24
+# Different IP ranges for each interface to avoid route conflicts
+interface_ranges:
+  wg0:
+    machine_range: 10.0.0.0/24
+    engine_range: 10.10.0.0/24
+  wg1:
+    machine_range: 10.1.0.0/24
+    engine_range: 10.11.0.0/24
+  wg2:
+    machine_range: 10.2.0.0/24
+    engine_range: 10.12.0.0/24
+  wg3:
+    machine_range: 10.3.0.0/24
+    engine_range: 10.13.0.0/24
