--- a/site.yml
+++ b/site.yml
@@ -1,19 +1,31 @@
-- hosts: gre1
+# - hosts: gre1
+#   gather_facts: true
+#   roles:
+#     - role: gre
+#     - role: bird
+# - hosts: gre2
+#   gather_facts: true
+#   roles:
+#     - role: gre
+#     - role: bird
+# - hosts: gre3
+#   gather_facts: true
+#   roles:
+#     - role: gre
+#     - role: bird
+- hosts: wireguard1
   gather_facts: true
   roles:
-    - role: gre
-    - role: bird
-- hosts: gre2
-  gather_facts: true
-  roles:
-    - role: gre
-    - role: bird
-- hosts: gre3
-  gather_facts: true
-  roles:
-    - role: gre
-    - role: bird
-- hosts: localhost
-  gather_facts: true
-  roles:
-    - role: calico
+    - role: wireguard
+# - hosts: wireguard2
+#   gather_facts: true
+#   roles:
+#     - role: wireguard
+# - hosts: wireguard3
+#   gather_facts: true
+#   roles:
+#     - role: wireguard
+# - hosts: localhost
+#   gather_facts: true
+#   roles:
+#     - role: calico
