Add wireguard multi instance with multi ip

--- a/inventory/sample/hosts.yml
+++ b/inventory/sample/hosts.yml
@@ -1,8 +1,38 @@
 all:
   hosts:
-    sampleHost:
-      ansible_host: 1.1.1.1
+    machine1:
+      ansible_host: 192.168.1.10
+      tunnel_type: src
+      public_ip: 86.104.40.89
+      # Example with different interface names and counts
+      physical_interfaces:
+        - name: ens18
+          wg_count: 4
+        - name: ens19
+          wg_count: 4
+    engine1:
+      ansible_host: 192.168.1.11
+      tunnel_type: dest
+      public_ip: 87.247.175.239
+      # Example with different interface names and counts
+      physical_interfaces:
+        - name: ens18
+          wg_count: 4
+        - name: ens19
+          wg_count: 4
+    machine2:
+      ansible_host: 192.168.1.12
+      tunnel_type: src
+      public_ip: 86.104.40.90
+      # Example with only one interface but more WireGuard tunnels
+      physical_interfaces:
+        - name: eth0
+          wg_count: 8
   children:
-    opennebula:
+    wireguard1:
       hosts:
-        sampleHost:
+        machine1:
+        engine1:
+    wireguard2:
+      hosts:
+        machine2:
