--- a/roles/bird/tasks/facts.yaml
+++ b/roles/bird/tasks/facts.yaml
@@ -1,33 +1,43 @@
 - name: Determine tunnel group & network spec
   set_fact:
-    gre_group: >-
+    tunnel_group: >-
       {{
         groups
         | dict2items
-        | selectattr('key', 'match', '^(gre|wireguard).*')
+        | selectattr('key', 'match', '^(gre|wireguard|vxlan).*')
         | selectattr('value', 'contains', inventory_hostname)
         | map(attribute='key')
         | first
       }}
+    tunnel_type_name: >-
+      {{
+        tunnel_group
+        | regex_replace('^(gre|wireguard|vxlan)([0-9]+)?.*', '\\1')
+        | default('gre')
+      }}
     local_subnet: "{{ ansible_default_ipv4.network + '/' + (ansible_default_ipv4.prefix | string) }}"
     interface: "{{ ansible_default_ipv4.interface }}"
+
+- name: Determine tunnel interface name
+  set_fact:
+    tunnel_interface_name: "{{ 'vxlan-eth0' if tunnel_group is match('^vxlan.*') else ('wg0' if tunnel_group is match('^wireguard.*') else 'gre') }}"
 
 - name: Determine peer_type
   set_fact:
     peer_type: "{{ 'dest' if tunnel_type == 'src' else 'src' }}"
 
-- name: Determine GRE peer manually
+- name: Determine tunnel peer manually
   set_fact:
     peer_host: "{{ item }}"
     index: "{{ (groups['all'] | list).index(inventory_hostname) + 1 }}"
   when: hostvars[item]['tunnel_type'] == peer_type
-  loop: "{{ groups[gre_group] | difference([inventory_hostname]) }}"
+  loop: "{{ groups[tunnel_group] | difference([inventory_hostname]) }}"
 
-- name: Set derived GRE and BGP variables
+- name: Set derived tunnel and BGP variables
   set_fact:
     dest_index: "{{ (groups['all'] | list).index(peer_host) + 1 }}"
     tunnel_local_address: "{{ tunnel_ip_range }}.{{ index }}"
 
-- name: Set derived GRE and BGP variables
+- name: Set derived tunnel and BGP variables
   set_fact:
     tunnel_dest_address: "{{ tunnel_ip_range }}.{{ dest_index }}"
