--- a/roles/ecmp/tasks/main.yml
+++ b/roles/ecmp/tasks/main.yml
@@ -1,3 +1,4 @@
+---
 - name: Create ECMP watcher script
   become: true
   template:
@@ -6,6 +7,7 @@
     mode: "0755"
     owner: root
     group: root
+  notify: restart ecmp-watcher
   tags: ecmp
 
 - name: Set ECMP script permissions
