--- a/roles/gre/tasks/gre.yaml
+++ b/roles/gre/tasks/gre.yaml
@@ -8,7 +8,7 @@
   become: yes
   sysctl:
     name: net.ipv4.ip_forward
-    value: '1'
+    value: "1"
     state: present
     reload: yes
     sysctl_file: /etc/sysctl.conf
@@ -19,7 +19,7 @@
   template:
     src: 90-gre.yaml.j2
     dest: /etc/netplan/90-gre.yaml
-    mode: '0400'
+    mode: "0400"
   vars:
     remote_ip: "{{ hostvars[peer_host]['public_ip'] }}"
     index: "{{ (groups['all'] | list).index(inventory_hostname) + 1 }}"
@@ -51,7 +51,7 @@
     is_10_0_range: "{{ interface_ips.stdout_lines | select('search', '\\s10\\.0\\.') | list | length > 0 }}"
   when: tunnel_type == "dest"
 
-- name: Ensure MASQUERADE rule exists on main interface if in 10.0.0.0/16
+- name: Ensure MASQUERADE rule exists on main interface
   become: yes
   ansible.builtin.iptables:
     table: nat
@@ -59,5 +59,4 @@
     out_interface: "{{ main_interface }}"
     jump: MASQUERADE
     state: present
-  when: tunnel_type == "dest" and is_10_0_range
-
+  when: tunnel_type == "dest"
